crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<orderedlist numeration="arabic" spacing="compact">
  <listitem>
    <para>
      first
    </para>
  </listitem>
  <listitem>
    <para>
      second
    </para>
  </listitem>
</orderedlist>
