crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-lower-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<orderedlist numeration="lowerroman" spacing="compact">
  <listitem>
    <para>
      one
    </para>
  </listitem>
  <listitem>
    <para>
      two
    </para>
  </listitem>
</orderedlist>
