crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<orderedlist numeration="arabic" spacing="compact" startingnumber="5">
  <listitem>
    <para>
      five
    </para>
  </listitem>
  <listitem>
    <para>
      six
    </para>
  </listitem>
</orderedlist>
