crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-two-parens.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<orderedlist numeration="arabic" spacing="compact">
  <listitem>
    <para>
      one
    </para>
  </listitem>
  <listitem>
    <para>
      two
    </para>
  </listitem>
</orderedlist>
