crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-upper-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  A. one B. two
</para>
