crates/carta/tests/snapshots/golden_writer__docbook__common__ordered-upper-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  I. one II. two
</para>
