crates/carta/tests/snapshots/golden_writer__docbook__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a simple paragraph with words
</para>
