crates/carta/tests/snapshots/golden_writer__docbook__common__quoted-smart.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  She said <quote>hello</quote> and <quote>hi</quote>.
</para>
