crates/carta/tests/snapshots/golden_writer__docbook__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  text <cite>raw</cite> more
</para>
